objects/Capability__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents as set ability, such as managing opportunities.</description>
    <fields>
        <fullName>Capability_Detail__c</fullName>
        <description>Details of the capability</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Capability Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Sub-Capability</relationshipLabel>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related release to the capability</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Capabilities</relationshipLabel>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOURCE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOURCE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Capability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub-Capability</label>
        <type>Checkbox</type>
    </fields>
    <label>Capability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Capability_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Capability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>notEqual</operation>
            <value>Release 1b Discovery</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Implementation</value>
        </filters>
        <label>Archived Impl. Capabilities</label>
    </listViews>
    <listViews>
        <fullName>Impl_Sub_Capabilities</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Capability__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Implementation</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>notEqual</operation>
            <value>Release 1b Discovery</value>
        </filters>
        <label>Archived Impl. Sub-Capabilities</label>
    </listViews>
    <listViews>
        <fullName>Jeff_s_Capabilities_for_1b</fullName>
        <columns>NAME</columns>
        <columns>Capability_Detail__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Capability__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 1b Discovery</value>
        </filters>
        <label>1B Discovery Capabilities</label>
    </listViews>
    <listViews>
        <fullName>Jeff_s_Sub_Capabilities_for_1b</fullName>
        <columns>NAME</columns>
        <columns>Capability_Detail__c</columns>
        <columns>Parent_Capability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Capability__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 1b Discovery</value>
        </filters>
        <label>1B Discovery Sub-Capabilities</label>
    </listViews>
    <listViews>
        <fullName>Sub_Capabilities</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Capability__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sub-Capabilities</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Capability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>